src/styles.css
/* ... */
.applicationFormSuccess {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 95px;
  justify-content: flex-start;
  font-size: 22px;
}

.applicationFormSuccessText {
  margin-bottom: 20px;
}



/* Landing Page */

a:hover {
  cursor: pointer;
  text-decoration: underline;
}

.contactButtons a:hover {
  cursor: pointer;
  color: darkblue;
  text-decoration: none;
}

.footer {
  width: 100%;
  /* height: 20vh; */
  background-color: #1d88d4;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-bottom: 1vh;
  min-height: 110px;
}

#earlyAccessContainer {
  width: 100%;
  background: linear-gradient(#4a29d7, #1d88d4);
  align-items: center;
  padding-bottom: 10vh;
  text-align: center;
}

.contactUs {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-right: 10vw;
  padding-left: 10vw;
  /* vertical-align: center; */
  /* width: 50vw; */
}

.followUsHeader {
  font-size: 2.5vh;
  padding-bottom: 3vh;
}

.contactImg {
  width: 7vh;
  height: auto;
  padding-left: 1vh;
  padding-right: 1vh;
}

.contactImg.linkedinIcon {
  width: 8vh;
  height: 5vh;
}

.moreInfoFooter {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  width: 25vw;
  font-size: 2vh;
}

.phone {
  padding-bottom: 2vh;
  padding-top: 5px;
}

.copyright {
  padding-top: 2vh;
}

.contactButton:hover {
  text-decoration: none;
}

.engagementButtonMobile {
  visibility: hidden;
  height: 0;
  width: 0;
}

.socialMedia {
  position: fixed;
  display: flex;
  flex-direction: column;
  right: 0;
  top: 20%;
  padding-right: 3vw;
  width: auto;
  align-items: center;
  justify-content: center;
  border-radius: 20px;
  z-index: 100;
}

.telegramButton,
.twitterButton,
.githubButton {
  display: flex;
  justify-content: center;
  align-items: center;
}

.githubImg,
.twitterImg {
  height: 6vh;
  width: 6vh;
}

.socialMediaButton {
  width: 6vh;
  height: 6vh;
}

@media only screen and (max-width: 7.4em) {
  .contactUs {
    /* width:20vw; */
    padding-left: 0;
    padding-right: 0;
  }
  .followUsHeader {
    text-align: center;
    min-width: 20vw;
    padding-bottom: 2vw;
    justify-content: center;
    padding-right: 0;
  }
  .contactButtons {
    align-content: center;
    justify-content: center;
    /* max-width:20vw; */
  }
  .contactImg {
    padding-bottom: 3px;
    padding-top: 3px;
  }
}

@media only screen and (max-width: 810px) {
  .contactUs {
    /* width:15vw; */
    padding-left: 0;
    padding-right: 0;
  }
  .followUsHeader {
    text-align: center;
    float: center;
    padding-right: 0;
    padding-bottom: 1vw;
    /* justify-content: center;
        padding-right:0px;*/
  }
  .contactButtons {
    align-content: center;
    justify-content: center;
    /* max-width:15vw; */
    /* padding-left:10px; */
  }
  .contactImg {
    padding-bottom: 3px;
    padding-top: 3px;
  }
}

@media only screen and (max-width: 950px) {
  .contactUs {
    /* width:25vw; */
    /* padding-left:10vw; */
    /* padding-right:10vw; */
  }
  .followUsHeader {
    width: 100px;
    text-align: center;
    float: center;
    /* padding-right:3vw; */
    padding-bottom: 3vw;
    /* justify-content: center;
        padding-right:0px;*/
  }
  .contactButtons {
    align-content: center;
    justify-content: center;
    /* width:20vw; */
    padding-left: 0;
  }
  .contactImg {
    padding-bottom: 3px;
    padding-top: 3px;
  }
}

@media (min-height: 600px) {
  .footer {
    font-size: 18px !important;
  }
}

/*scroll button css*/

@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);
* {
  margin: 0;
  padding: 0;
}
html, body {
  height: 100%;
}
section {
  position: relative;
  width: 100%;
  height: 100%;
}
section::after {
  position: absolute;
  bottom: 0;
  left: 0;
  content: '';
  width: 100%;
}
section h1 {
  z-index: 2;
  color: black;
  font: normal 300 32px/1 'Josefin Sans', sans-serif;
  text-align: center;
  white-space: nowrap;
  padding-top: 30px;
}

.downArrow {
  height: 75px;
  width: 75px;
  padding-bottom: 10px;
}
.demo a {
  z-index: 2;
  display: inline-block;
  -webkit-transform: translate(0, -50%);
  transform: translate(0, -50%);
  color: black;
  font : normal 400 20px/1 'Josefin Sans', sans-serif;
  letter-spacing: .1em;
  text-decoration: none;
  transition: opacity .3s;
}
.demo a:hover {
  opacity: .5;
}

.demo {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
.infoContainer {
  padding-left: 10px;
  padding-right: 10px;
  text-align: justify;
  display: flex;
  flex-direction: column;
  font : normal 400 18px/1 'Josefin Sans', sans-serif;
}
.infoSpan {
  margin-top: 20px;
}

.shareIcon {
  height: 20px;
  width: 20px;
  margin-left: 10px;
}
.exampleContainer {
  display: flex;
  flex-direction: column;
}
.scrollBtnContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
}

#section03 a {
}

#section03 a span::after {
  border-left: 1px solid #fff;
  border-bottom: 1px solid #fff;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  box-sizing: border-box;
}
#section03 a span::before {
  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
  border-radius: 100%;
  opacity: 0;
  -webkit-animation: sdb03 3s infinite;
  animation: sdb03 3s infinite;
  box-sizing: border-box;
}
@-webkit-keyframes sdb03 {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
@keyframes sdb03 {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

